Closed Bug 76422 Opened 24 years ago Closed 24 years ago

Crashes with message %SYSTEM-F-OPCCUS

Categories

(SeaMonkey :: General, defect)

DEC
OpenVMS
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: gfruth, Assigned: colin)

References

()

Details

(Whiteboard: critical for 0.9.2)

Attachments

(3 files)

If I have my home page set to http://www.abpa-tpa.com I get the following after I start Mozilla. assert error: expression = n > 0, in file DKA0:[WORK.NSPRPUB.JACKETS]POLL_JACKET .C;56 at line 523 %SYSTEM-F-OPCCUS, opcode reserved to customer fault at PC=FFFFFFFF80621E04, PS=0 000001B %TRACE-F-TRACEBACK, symbolic stack dump follows image module routine line rel PC abs PC 0 FFFFFFFF80621E04 FFFFFFFF80621E04 0 FFFFFFFF8058F248 FFFFFFFF8058F248 0 FFFFFFFF806A3368 FFFFFFFF806A3368 VMS_JACKETS POLL_JACKET GENERIC_POLL 21651 0000000000000980 000000000019BEF0 LIBGLIB GMAIN g_main_poll 19587 0000000000001688 0000000000B929D8 LIBGLIB GMAIN g_get_current_time 19355 0000000000000FF4 0000000000B92344 LIBGLIB GMAIN g_main_iterate 19358 0000000000000000 0000000000000000 LIBGLIB GMAIN g_main_run 19482 0000000000001470 0000000000B927C0 LIBGTK GTKMAIN gtk_main 20665 0000000000000A58 0000000000DE2508 LIBWIDGET_GTK NSAPPSHELL Run 70697 0000000000001544 0000000000A835E4 MOZILLA-BIN NSAPPRUNNER main1 61969 00000000000074C0 00000000000374C0 MOZILLA-BIN NSAPPRUNNER main 62263 0000000000008188 0000000000038188 MOZILLA-BIN NSAPPRUNNER __MAIN 0 0000000000000070 0000000000030070 PTHREAD$RTL 0 00000000000312FC 000000007BBC32FC PTHREAD$RTL 0 0000000000012B48 000000007BBA4B48 0 FFFFFFFF8D0A33F4 FFFFFFFF8D0A33F4 $
why is this in ActiveX wrapper?
Reporter - which version are you running? I am unable to reproduce this crash using M0.7, M0.8 or M0.81. What if you don't have www.abpa-tpa.com set as your home page, but you just enter it into the URL bar. Does it still crash? Do you get the "Default Plugin" pop-up? If so, are you answering OK or CANCEL? And finally, what version of OpenVMS are you running.
Assignee: locka → colin
Status: UNCONFIRMED → NEW
Component: ActiveX Wrapper → Browser-General
Ever confirmed: true
I'm using M0.81. I'm not at the site today where I can test this; so this is from my recollection. No, it does not crash if www.abpa-tpa.com is not my home page. It was run on OpenVMS 7.2-1, using the latest UCX TCP patch (5.0a +112 I believe). I'll get back to you on Monday about the Default Plugin box; that dialogue did pop up if I started with a different URL and then entered www.abpa- tpa.com. We had this problem before replicating a problem I had using M0.6; that problem went away with M0.8. Should we arrange a method for you to have access to this machine to debug this problem? It would not be hard to get you telnet access; but that is obviously insufficient.
At this point I don't think access to your system will help much. It is *possible* that something in your profile could be causing this. I'm not sure what but I've seen old profiles cause some very weird behaviour. Rather than blowing away your profile(s) for good, just rename _MOZILLA.DIR (in your SYS$LOGIN) to something like _MOZILLA_OLD.DIR and restart Mozilla. Let it create a new profile and then set your home page and see if the problem is still present. After testing nuke the new _MOZILLA.DIR tree and rename _MOZILLA_OLD.DIR back to _MOZILLA.DIR.
I changed the URL to abpa-tpa.com. There are several places where things act wierd. For instance, twice, I get to the point where a default_plugin box appears, but it is blank except for the title bar. The browser is hung at that point and I kill the procedure with a ctrl-c in the decterm window. I have not tried to reproduce this bug consistantly. At another point, when exiting the browser via ctrl-q (or perhaps it was file->exit), I got a message about 'leaking'. But I am digressing from the but I reported here. I will stick to what I can reproduce consistantly and get back to the one reported here. I deleted my profile by deleting the [._mozilla...] files from my login directory. I then do "@SYS$COMMON:[MOZILLA]MOZILLA.COM ABPA-TPA.COM". With verify turned on, here are the last several lines. The stack dump appears to be the same as before. The web server at abpa-tpa.com is an Apache web server on the same box as the browser. The Apache server is configured to a redirect to http://www.abpa-tpa.com in this case. I.E. the Apache config file contains: RedirectMatch permanent ^/$ http://www.abpa-tpa.com/ Not that you asked. But here is the output of "PRODUCT SHOW HISTORY". I think I have all the required patches installed. ----------------------------------- ----------- ----------- -------------------- PRODUCT KIT TYPE OPERATION DATE AND TIME ----------------------------------- ----------- ----------- -------------------- CPQ AXPVMS MOZILLA M0.8-1 Full LP Install 17-APR-2001 10:34:46 DEC AXPVMS TCPIP_ECO V5.0-112 Patch Install 17-APR-2001 10:04:54 CPQ AXPVMS MOZILLA M0.8-1 Full LP Install 03-APR-2001 19:37:03 CPQ AXPVMS MOZILLA M0.7 Full LP Remove 03-APR-2001 19:37:03 DEC AXPVMS JAVA V1.1-85 Full LP Install 03-APR-2001 19:13:13 COMPAQ AXPVMS V72_MGMTAGENTS V2.0-11 Full LP Install 20-FEB-2001 09:50:4 1 CPQ AXPVMS MOZILLA M0.7 Full LP Install 14-FEB-2001 17:59:44 CPQ AXPVMS MOZILLA M0.6 Full LP Remove 14-FEB-2001 17:59:44 DEC AXPVMS VMS721_PTHREAD V2.0 Patch Install 14-FEB-2001 17:57:54 CPQ AXPVMS CSWS V1.0-1 Full LP Install 11-JAN-2001 11:11:44 CPQ AXPVMS CSWS V1.0 Full LP Remove 11-JAN-2001 11:11:44 DEC AXPVMS VMS721_PTHREAD V2.0 Patch Install 20-DEC-2000 13:29:15 CPQ AXPVMS MOZILLA M0.6 Full LP Install 12-DEC-2000 12:58:28 CPQ AXPVMS MOZILLA M0.6 Full LP Remove 12-DEC-2000 12:54:52 CPQ AXPVMS MOZILLA M0.6 Full LP Install 12-DEC-2000 12:34:12 CPQ AXPVMS MOZILLA I5.0 Full LP Remove 12-DEC-2000 12:34:12 DEC AXPVMS VMS721_BACKUP V1.0 Patch Install 16-NOV-2000 11:23:46 DEC AXPVMS DFU V2.7 Full LP Install 25-OCT-2000 13:33:42 DEC AXPVMS VMS721_FIBRECHAN V3.0 Patch Install 18-OCT-2000 15:45:47 DEC AXPVMS VMS721_F11X V2.0 Patch Install 18-OCT-2000 15:36:30 CPQ AXPVMS MOZILLA I5.0 Full LP Install 18-OCT-2000 11:48:16 CPQ AXPVMS CSWS V1.0 Full LP Install 05-OCT-2000 10:10:32 CPQ AXPVMS CSWS T1.0 Full LP Remove 05-OCT-2000 10:10:32 CPQ AXPVMS CSWS T1.0 Full LP Install 29-SEP-2000 18:40:06 DEC AXPVMS DECNET_PHASE_IV V7.2-1 Full LP Install 28-SEP-2000 12:13:36 DEC AXPVMS DECNET_OSI V7.2-1 Full LP Remove 28-SEP-2000 12:13:04 DEC AXPVMS DNVOSIECO01 V7.2 Patch Remove 28-SEP-2000 12:13:04 DEC AXPVMS VMS721_SYS V5.0 Patch Install 11-APR-2000 09:46:24 DEC AXPVMS VMS721_PCSI V1.0 Patch Install 11-APR-2000 09:41:38 DEC AXPVMS NS_NAV_EXPORT V3.3 Full LP Install 30-MAR-2000 09:47:29 DEC AXPVMS DNVOSIECO01 V7.2 Patch Install 30-MAR-2000 09:40:34 DEC AXPVMS VMS721_LAN V1.0 Patch Install 30-MAR-2000 08:45:11 DEC AXPVMS DWMOTIF125_UPD V1.0 Patch Install 29-MAR-2000 15:49:13 DEC AXPVMS DECNET_OSI V7.2-1 Full LP Install 29-MAR-2000 15:04:17 DEC AXPVMS VMS721_DQCONFIG V2.0 Patch Install 29-MAR-2000 14:54:50 DEC AXPVMS VMS721_UPDATE V1.0 Patch Install 29-MAR-2000 14:50:16 DEC AXPVMS DWMOTIF V1.2-5 Full LP Install 29-MAR-2000 08:57:50 DEC AXPVMS OPENVMS V7.2-1 Platform Install 29-MAR-2000 08:57:50 DEC AXPVMS TCPIP V5.0-10 Full LP Install 29-MAR-2000 08:57:50 DEC AXPVMS VMS V7.2-1 Oper System Install 29-MAR-2000 08:57:50 ----------------------------------- ----------- ----------- -------------------- $ write sys$output "Starting mozilla-bin..." Starting mozilla-bin... $ mcr SYS$COMMON:[MOZILLA]mozilla-bin. abpa-tpa.com ProfileManager : CreateNewProfile Profile Name: default Profile Dir: /sys$sysdevice/fruth/.mozilla Registering plugin 0 for: "*","All types",".*" Registering plugin 0 for: "*","All types",".*" Registering plugin 0 for: "*","All types",".*" Registering plugin 0 for: "*","All types",".*" Error loading URL http://abpa-tpa.com/: 804b0002 Registering plugin 0 for: "*","All types",".*" Registering plugin 0 for: "*","All types",".*" Registering plugin 0 for: "*","All types",".*" Registering plugin 0 for: "*","All types",".*" Registering plugin 0 for: "*","All types",".*" Registering plugin 0 for: "*","All types",".*" %SYSTEM-F-OPCCUS, opcode reserved to customer fault at PC=FFFFFFFF80621E04, PS=0 000001B %TRACE-F-TRACEBACK, symbolic stack dump follows image module routine line rel PC abs PC 0 FFFFFFFF80621E04 FFFFFFFF80621E04 0 FFFFFFFF8058F248 FFFFFFFF8058F248 0 FFFFFFFF806A3368 FFFFFFFF806A3368 VMS_JACKETS POLL_JACKET GENERIC_POLL 21651 0000000000000980 000000000019BEF0 LIBGLIB GMAIN g_main_poll 19587 0000000000001688 0000000000B929D8 LIBGLIB GMAIN g_get_current_time 19355 0000000000000FF4 0000000000B92344 LIBGLIB GMAIN g_main_iterate 19358 0000000000000000 0000000000000000 LIBGLIB GMAIN g_main_run 19482 0000000000001470 0000000000B927C0 LIBGTK GTKMAIN gtk_main 20665 0000000000000A58 0000000000DE2508 LIBWIDGET_GTK NSAPPSHELL Run 70697 0000000000001544 0000000000A835E4 MOZILLA-BIN NSAPPRUNNER main1 61969 00000000000074C0 00000000000374C0 MOZILLA-BIN NSAPPRUNNER main 62263 0000000000008188 0000000000038188 MOZILLA-BIN NSAPPRUNNER __MAIN 0 0000000000000070 0000000000030070 PTHREAD$RTL 0 00000000000312FC 000000007BBC32FC PTHREAD$RTL 0 0000000000012B48 000000007BBA4B48 0 FFFFFFFF8D0A33F4 FFFFFFFF8D0A33F4
I am still unable to reproduce this problem on any of the systems I have access to. At this point I think I'd like to wait until M0.9 hits the streets and see if that fixes the problem. This isn't as lame as it sounds because a fix has just gone in to M0.9 to prevent a crash when the default plugin box is displayed (bug 76505). Although the footprints are not identical, the time and place that the problem is happening is the same, and as with this problem, only "the lucky few" are experiencing bug 76505. M0.9 should be out in a few days. Let's see if that fixes it.
Status: NEW → ASSIGNED
Agreed.
M0.9 is out (its already on the Mozilla web site at http://www.mozilla.org/releases/) and will be available from the OpenVMS web site tomorrow. Can you give it a whirl?
I got my walking papers from ABPA last week - they're close to being bought-out and decided it is time to cut expenses; IS contractors/consultants are the first to go. I won't be able to install or test the next release. I'll be back when I get my own Alpha OpenVMS hobbyist machine later this year. For now, I guess you can close it since it works for you.
Sorry to hear that. So I'll close the report since I can't reproduce it myself, but anyone else who sees this problem should feel free to re-open it.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → WORKSFORME
I have absolutely no idea why I'm the QA Contact - I don't work on Mozilla products - but I will verify this regardless.
Status: RESOLVED → VERIFIED
I'm seeing the same problem with M0.9 on my OpenVMS V7.2-1 system. I'm running TCPIP V5.0-112 and have gobs of page file quota (1,500,000 pagelets). I went to http://www.apple.com/itunes/theater/import_cd.html and M0.9 disappears. Here's the stack trace: assert error: expression = n > 0, in file DKA0:[WORK.NSPRPUB.JACKETS]POLL_JACKET .C;100 at line 523 %SYSTEM-F-OPCCUS, opcode reserved to customer fault at PC=FFFFFFFF80623E54, PS=0 000001B %TRACE-F-TRACEBACK, symbolic stack dump follows image module routine line rel PC abs PC 0 FFFFFFFF80623E54 FFFFFFFF80623E54 0 FFFFFFFF805926B8 FFFFFFFF805926B8 0 FFFFFFFF806A5CB8 FFFFFFFF806A5CB8 VMS_JACKETS POLL_JACKET GENERIC_POLL 21653 0000000000000964 000000000018BED4 LIBGLIB GMAIN g_main_poll 19587 0000000000001688 0000000000C769D8 LIBGLIB GMAIN g_get_current_time 19355 0000000000000FF4 0000000000C76344 LIBGLIB GMAIN g_main_iterate 19358 0000000000000000 0000000000000000 LIBGLIB GMAIN g_main_run 19482 0000000000001470 0000000000C767C0 LIBGTK GTKMAIN gtk_main 20665 0000000000000A58 0000000000EC6508 LIBWIDGET_GTK NSAPPSHELL Run 71933 0000000000001544 0000000000B675E4 MOZILLA-BIN NSAPPRUNNER main1 63658 0000000000007670 0000000000037670 MOZILLA-BIN NSAPPRUNNER main 63962 0000000000008358 0000000000038358 MOZILLA-BIN NSAPPRUNNER __MAIN 0 0000000000000070 0000000000030070 PTHREAD$RTL 0 00000000000312FC 000000007BB572FC PTHREAD$RTL 0 0000000000012B48 000000007BB38B48 0 FFFFFFFF842CF3F4 FFFFFFFF842CF3F4 I've already emailed Colin off-line about this. As expected, it works for him, but fails repeatedly for me. Sounds like some configuration issues. I've emailed Colin my account's quotas and some software version information.
Status: VERIFIED → REOPENED
Resolution: WORKSFORME → ---
This is interesting. I am unable to reproduce the crash, but with some additional debugging I have in my version of VMS_JACKETS I do see some strange behaviour with select() occurring at exactly the same time as the "default plugin" window appears. Since both the people who reported this say their problem occurs at the time when a "default plugin" should appear AND their crash is in the VMS_JACKET's poll routine (which calls select), I am inclined to believe that these two events are related. I'm going to do some more poking around with the problem I can reproduce, and also talk to the TCP/IP group.
Maybe just a coincidence but both people with the crash are running DEC AXPVMS TCPIP_ECO V5.0-112 (V5.0A ECO 2) while I am still running V4.2 ECO 3. They are also both running V7.2-1 while I am running V7.1-2. John, do you ever see a message like this: GENERIC_POLL: unknown condition, errno=xx vaxc$errno=xx [internal reference: UCX 2390]
No, I've never seen it, but the way I run Mozilla under Motif, I only see things written to stdout if I go looking for them. Its only when Mozilla crashes do I go poking around. I'll start keeping an eye out for 'interesting' output even when Mozilla doesn't crash.
I don't work on the Mozilla code base. gerardok, please reassign to the appropriate person, thanks.
QA Contact: cpratt → gerardok
I just found this bug and think I've fixed it (hard to tell if its really fixed since I could never reproduce the crash). Contact me if you want a new shareable to try out.
I've emailed Colin saying that I'm willing to test a new image for him.
John confirmed to me that the problem is fixed. The strange select() calls I were seeing also disappeared with this fix. Now I just need to check it in (that means fetching and building from tip first).
Status: REOPENED → ASSIGNED
*** Bug 80648 has been marked as a duplicate of this bug. ***
I'll attach a patch for the M0.91 tip next. What comes back from ConnetionNumber on OpenVMS is NOT an regular FD and can not be passed to a poll/select call. On OpenVMS ConnectionNumber returns an event flag However, the OpenVMS poll/select has been modified to accept event flags (needed it for GTK and NSPR) but in order to tell poll/select its an event flag and not a regular FD you have to pass it in as a negative value.
Attached patch Fixes crashSplinter Review
It turns out that the event flag that comes back from ConnectionNumber isn't even the best event flag to use. Its a long story, and this really needs a better long term solution, but for now the right event flag to use is 2, so I'm attaching a new patch.
Looks like voodoo to me. r/sr=blizzard
Oh, can you please add a comment inside your ifdef that describes why you need that please?
I'm going to hold off with this patch for now. I'm trying to fix this problem in a different (non-Mozilla) VMS library in such a way that I can then use ConnectionNumber just like everyone else. If it works I'll just close this PTR as fixed. If it doesn't then I guess I'll have to proceed with this kludge. I'll report back here....
I've fixed XConnectionNumber in the VMS library but unfortunately I can't fix ConnectionNumber because its a macro and not a routine (and attempts to redefine the macro fail because the one in xlib.h is always loaded after mine). So for now the best I can do is to use XConnectionNumber and that's what the latest patch does.
r/sr=blizzard
Requested checkin from drivers. Still waiting....
a=chofmann
Whiteboard: critical for 0.9.2
I checked this in this morning.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: