For OpenVMS only, use XConnectionNumber instead of ConnectionNumber b=76422 r/sr=blizzard a=chofmann